# corana

./: .dir-locals.el  .gitignore  .gitmodules  .pylintrc  .venv  README.md  TODOs.org  design_notes.org  doot.toml  dooter.py  general.config  makefile  notes.org  pyproject.toml
.tasks/: basic.toml  corana_todos.org
.tasks/taskcode/: json.py
code_analysis/__data/: process_log  process_log.org  sources  zip_marker_template
code_analysis/__data/reference/: drools_reference  paradox_reference  plantuml_keywords  skyrim_reference
code_analysis/__data/schemas/: org-spec  tt_elements
code_analysis/doot_tasks/: __init__.py  _codegen.py  _dialog.py  _grammars.py  _obsolete.py  _patches.py  _quests.py  _summarise.py  _visuals.py  binary.py  codegen.py  data.py  data_listing.py  data_toml.py  data_zip.py  dialog.py  parsing.py  preprocessors.py  rules.py  spider.py  todo_tasks.py
code_analysis/mixins/: dataset_globber.py  marker_manip.py  path_mirror.py  pygment_runner.py
code_analysis/parsers/: lua.py
code_analysis/parsers/dragon_age/: __init__.py
code_analysis/parsers/swda/: __init__.py
code_analysis/pygment_lexers/: jacamo.py  papyrus.py
code_analysis/reporters/: plantuml.py  text.py
code_analysis/specific/: __init__.py  nyt_extractor.py
code_analysis/specific/abl/: abl_extractor.py  abl_parser.py  abl_struct.py  notes.org
code_analysis/specific/ai/: abl_extractor.py  abl_notes.org  abl_parser.py  abl_struct.py  versu_notes.org  versu_post_processor.py
code_analysis/specific/bioware/: __init__.py  binary.py  infinity.py
code_analysis/specific/config_files/: config_extractor.py  notes.org
code_analysis/specific/csharp/: notes.org  parser.py
code_analysis/specific/csv/: csv_extractor.py  handlers.py  notes.org  tsv_extractor.py
code_analysis/specific/dev_logs/: accumulator.py  dev_log_extractor.py  handler.py  notes.org
code_analysis/specific/dialogue/: dialogue_extractor.py  handle_lua.py  handle_txt.py  handle_xml.py  notes.org  tyranny_conversations.py
code_analysis/specific/dsls/: abl.py  versu.py
code_analysis/specific/eulas/: eula_extractor.py  notes.org  parser.py
code_analysis/specific/fiction/: dramatis_extractor.py  dramatis_parser.py  narrative_extractor.py  notes.org
code_analysis/specific/game_config_text/: game_script_extractor.py  notes.org
code_analysis/specific/games/: cif_library_handler.py  cif_state_handler.py  game_config.notes  lua_notes.org  notes.org  promweek_handler.py  xml_notes.org
code_analysis/specific/grammars/: bbc_extractor.py  notes.org  paradox_extractor.py  tracery_extractor.py
code_analysis/specific/indexes/: index_extractor.py  notes.org
code_analysis/specific/json/: json_extractor.py  notes.org
code_analysis/specific/lua/: lua_extractor.py  notes.org
code_analysis/specific/misc/: cmudict-0.7b  micro-talespin.lisp
code_analysis/specific/misc_data/: roberts_table
code_analysis/specific/names/: name_extractor.py
code_analysis/specific/natural_language_deontics/: deontic_extractor.py
code_analysis/specific/nyt/: notes.org  nyt_data.py  nyt_extractor.py
code_analysis/specific/patch_notes/: handlers.py  notes.org  patch_notes_extractor.py
code_analysis/specific/sql/: notes.org
code_analysis/specific/swda/: swda.py
code_analysis/specific/time/: handlers.py  notes.org  patch_notes.org  patch_notes_extractor.py
code_analysis/specific/versu/: notes.org  versu_extractor.py  versu_parser.py  versu_struct.py
code_analysis/specific/xml/: cif_library_handler.py  cif_state_handler.py  general_handlers.py  notes.org  promweek_handler.py  xml_rule_extractor.py  xml_text_extractor.py
code_analysis/spiders/: bay12_spiders.py  facebook_spiders.py  media_wiki_spiders.py  pipeline.py  wordpress_spiders.py
code_analysis/structs/: analysis_case.py  parse_base.py
code_analysis/structs/binary/: bethesda.py  fallout.py  infinity.py  sims.py
code_analysis/structs/dsls/: __init__.py  abl_struct.py  data_types.py
code_analysis/structs/extracts/: versu_struct.py
code_analysis/structs/json/: grammars.py
code_analysis/structs/lexers/: __init__.py  asl.py  neverwinter_script.py
code_analysis/structs/text/: __init__.py
code_analysis/structs/xml/: obsidian.py
code_analysis/util/: __init__.py  analysis_case.py  ast_base.py  base_visitor.py  natlang.py  parse_base.py  parse_data.py  parse_state.py  post_processor.py  pygment_runner.py  trie.py  utils.py  xml_utils.py
code_analysis/util/csharp/: csharp_classes
code_analysis/util/csv/: dem_handler.py  handlers.py  notes.org
code_analysis/util/eulas/: notes.org
code_analysis/util/extractors/: abl_extractor.py  csharp_extract.py
code_analysis/util/fiction/: dramatis_extractor.py  notes.org
code_analysis/util/indexes/: index_extractor.py
code_analysis/util/json/: json_extractor.py
code_analysis/visual/: sankey.ipynb  sankey.py
corana/: __init__.py  constants.py
corana/__data/: dataset_marker_template  dataset_readme
corana/actions/: basic.py  metadata.py
corana/cmds/: metadata_cmd.py
corana/mixins/: marker_manip.py
corana/spiders/: bay12_spiders.py
corana/structs/: metadata.py
corana/tasks/: _todo.py  bioware.py  codegen.py  data_listing.py  data_toml.py  data_zip.py  spider.py
corana/util/: __init__.py  utils.py
data/: sources
docs/: conf.py  design_notes.org  index.rst  notes.org
lisp/neverwinter-mode/: neverwinter-mode.el
lisp/papyrus-mode/: papyrus-mode.el
lisp/scar-mode/: scar-mode.el
provenance/: __init__.py  constants.py
provenance/__data/: dataset_readme
provenance/actions/: basic.py  metadata.py  read_data.py  tree_shadow.py
provenance/cmds/: metadata_cmd.py
provenance/doot_tasks/: binary.py  data_listing.py
provenance/mixins/: dataset_globber.py  marker_manip.py
provenance/spiders/: media_wiki_spiders.py
provenance/structs/: metadata.py
provenance/tasks/: _todo.py  codegen.py  data_toml.py  data_zip.py  spider.py
provenance/util/: __init__.py
src/specific/: coref_resolution.py  nyt_extractor.py  tsv_extractor.py
src/util/: analysis_case.py  utils.py
(+134 files in other folders)
